a9_220101002/y.output
Terminals unused in grammar

    BOOL
    CONST


State 197 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: ε

    2 N: ε

    3 primary_expression: IDENTIFIER
    4                   | INTCONST
    5                   | FLOATCONST
    6                   | CHARCONST
    7                   | STRING
    8                   | LPAREN expression RPAREN

    9 postfix_expression: primary_expression
   10                   | postfix_expression LSQRBRC expression RSQRBRC
   11                   | postfix_expression LPAREN argument_expression_list RPAREN
   12                   | postfix_expression LPAREN RPAREN
   13                   | postfix_expression DEREF IDENTIFIER

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list COMMA assignment_expression

   16 unary_expression: postfix_expression
   17                 | unary_operator unary_expression

   18 unary_operator: BITAND
   19               | MULT
   20               | INCR
   21               | DECR
   22               | ADD
   23               | SUB
   24               | COMPLEMENT
   25               | LOGICALNOT

   26 multiplicative_expression: unary_expression
   27                          | multiplicative_expression MULT unary_expression
   28                          | multiplicative_expression DIV unary_expression
   29                          | multiplicative_expression MOD unary_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression ADD multiplicative_expression
   32                    | additive_expression SUB multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression LSHIFT additive_expression
   35                 | shift_expression RSHIFT additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression LESS shift_expression
   38                      | relational_expression GREATER shift_expression
   39                      | relational_expression LESSEQUAL shift_expression
   40                      | relational_expression GREATEREQUAL shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQUALITY relational_expression
   43                    | equality_expression NOTEQUAL relational_expression

   44 AND_expression: equality_expression
   45               | AND_expression BITAND equality_expression

   46 XOR_expression: AND_expression
   47               | XOR_expression BITXOR AND_expression

   48 OR_expression: XOR_expression
   49              | OR_expression BITOR XOR_expression

   50 logical_and_expression: OR_expression
   51                       | logical_and_expression LOGICALAND M OR_expression

   52 logical_or_expression: logical_and_expression
   53                      | logical_or_expression LOGICALOR M logical_and_expression

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression ASSIGN assignment_expression

   58 expression: assignment_expression

   59 declaration: type_specifier init_declarator_list SEMICOLON

   60 init_declarator_list: init_declarator
   61                     | init_declarator_list COMMA init_declarator

   62 init_declarator: declarator
   63                | declarator ASSIGN initializer

   64 type_specifier: VOID
   65               | CHAR
   66               | INTEGER
   67               | FLOAT

   68 declarator: pointer direct_declarator
   69           | direct_declarator

   70 direct_declarator: IDENTIFIER
   71                  | LPAREN declarator RPAREN
   72                  | direct_declarator LSQRBRC RSQRBRC
   73                  | direct_declarator LSQRBRC assignment_expression RSQRBRC
   74                  | direct_declarator LPAREN parameter_type_list_opt RPAREN

   75 pointer: MULT

   76 parameter_list: parameter_declaration
   77               | parameter_list COMMA parameter_declaration

   78 parameter_type_list_opt: parameter_list
   79                        | ε

   80 parameter_declaration: type_specifier declarator
   81                      | type_specifier

   82 initializer: assignment_expression

   83 statement: compound_statement
   84          | expression_statement
   85          | selection_statement
   86          | iteration_statement
   87          | jump_statement

   88 compound_statement: BLOCKBEGIN BLOCKEND
   89                   | BLOCKBEGIN block_item_list BLOCKEND

   90 block_item_list: block_item
   91                | block_item_list M block_item

   92 block_item: declaration
   93           | statement

   94 expression_statement: expression SEMICOLON
   95                     | SEMICOLON

   96 selection_statement: IF LPAREN expression N RPAREN M statement N
   97                    | IF LPAREN expression N RPAREN M statement N ELSE M statement N

   98 iteration_statement: FOR LPAREN expression_statement M expression_statement N M expression N RPAREN M statement
   99                    | DO M statement M WHILE LPAREN expression RPAREN SEMICOLON
  100                    | WHILE M LPAREN expression RPAREN M statement

  101 jump_statement: RETURN SEMICOLON
  102               | RETURN expression SEMICOLON
  103               | BREAK SEMICOLON
  104               | GOTO IDENTIFIER SEMICOLON

  105 translation_unit: external_declaration
  106                 | translation_unit external_declaration

  107 external_declaration: function_definition
  108                     | declaration

  109 function_definition: type_specifier declarator declaration_list compound_statement
  110                    | function_prototype compound_statement

  111 function_prototype: type_specifier declarator

  112 declaration_list: declaration
  113                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <str> (258) 3 13 70 104
    INTCONST <intval> (259) 4
    FLOATCONST <floatval> (260) 5
    STRING <str> (261) 7
    CHARCONST <charval> (262) 6
    RETURN (263) 101 102
    VOID (264) 64
    BOOL (265)
    FLOAT (266) 67
    INTEGER (267) 66
    CHAR (268) 65
    CONST (269)
    DO (270) 99
    WHILE (271) 99 100
    IF (272) 96 97
    ELSE (273) 97
    FOR (274) 98
    GOTO (275) 104
    BREAK (276) 103
    LSQRBRC (277) 10 72 73
    RSQRBRC (278) 10 72 73
    LPAREN (279) 8 11 12 71 74 96 97 98 99 100
    RPAREN (280) 8 11 12 71 74 96 97 98 99 100
    BLOCKBEGIN (281) 88 89
    BLOCKEND (282) 88 89
    DEREF (283) 13
    INCR (284) 20
    DECR (285) 21
    LOGICALAND (286) 51
    LOGICALOR (287) 53
    BITAND (288) 18 45
    BITXOR (289) 47
    BITOR (290) 49
    LOGICALNOT (291) 25
    COMPLEMENT (292) 24
    QUESTION (293) 55
    COLON (294) 55
    MULT (295) 19 27 75
    ADD (296) 22 31
    SUB (297) 23 32
    DIV (298) 28
    MOD (299) 29
    LSHIFT (300) 34
    RSHIFT (301) 35
    LESSEQUAL (302) 39
    GREATEREQUAL (303) 40
    EQUALITY (304) 42
    LESS (305) 37
    GREATER (306) 38
    NOTEQUAL (307) 43
    ASSIGN (308) 57 63
    SEMICOLON (309) 59 94 95 99 101 102 103 104
    COMMA (310) 15 61 77


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    M <expr> (57)
        on left: 1
        on right: 51 53 55 91 96 97 98 99 100
    N <expr> (58)
        on left: 2
        on right: 55 96 97 98
    primary_expression <expr> (59)
        on left: 3 4 5 6 7 8
        on right: 9
    postfix_expression <expr> (60)
        on left: 9 10 11 12 13
        on right: 10 11 12 13 16
    argument_expression_list <prmlist> (61)
        on left: 14 15
        on right: 11 15
    unary_expression <expr> (62)
        on left: 16 17
        on right: 17 26 27 28 29 57
    unary_operator <charval> (63)
        on left: 18 19 20 21 22 23 24 25
        on right: 17
    multiplicative_expression <expr> (64)
        on left: 26 27 28 29
        on right: 27 28 29 30 31 32
    additive_expression <expr> (65)
        on left: 30 31 32
        on right: 31 32 33 34 35
    shift_expression <expr> (66)
        on left: 33 34 35
        on right: 34 35 36 37 38 39 40
    relational_expression <expr> (67)
        on left: 36 37 38 39 40
        on right: 37 38 39 40 41 42 43
    equality_expression <expr> (68)
        on left: 41 42 43
        on right: 42 43 44 45
    AND_expression <expr> (69)
        on left: 44 45
        on right: 45 46 47
    XOR_expression <expr> (70)
        on left: 46 47
        on right: 47 48 49
    OR_expression <expr> (71)
        on left: 48 49
        on right: 49 50 51
    logical_and_expression <expr> (72)
        on left: 50 51
        on right: 51 52 53
    logical_or_expression <expr> (73)
        on left: 52 53
        on right: 53 54 55
    conditional_expression <expr> (74)
        on left: 54 55
        on right: 55 56
    assignment_expression <expr> (75)
        on left: 56 57
        on right: 14 15 57 58 73 82
    expression <expr> (76)
        on left: 58
        on right: 8 10 55 94 96 97 98 99 100 102
    declaration (77)
        on left: 59
        on right: 92 108 112 113
    init_declarator_list <declist> (78)
        on left: 60 61
        on right: 59 61
    init_declarator <dec> (79)
        on left: 62 63
        on right: 60 61
    type_specifier <types> (80)
        on left: 64 65 66 67
        on right: 59 80 81 109 111
    declarator <dec> (81)
        on left: 68 69
        on right: 62 63 71 80 109 111
    direct_declarator <dec> (82)
        on left: 70 71 72 73 74
        on right: 68 69 72 73 74
    pointer <intval> (83)
        on left: 75
        on right: 68
    parameter_list <prmlist> (84)
        on left: 76 77
        on right: 77 78
    parameter_type_list_opt <prmlist> (85)
        on left: 78 79
        on right: 74
    parameter_declaration <prm> (86)
        on left: 80 81
        on right: 76 77
    initializer <expr> (87)
        on left: 82
        on right: 63
    statement <expr> (88)
        on left: 83 84 85 86 87
        on right: 93 96 97 98 99 100
    compound_statement <expr> (89)
        on left: 88 89
        on right: 83 109 110
    block_item_list <expr> (90)
        on left: 90 91
        on right: 89 91
    block_item <expr> (91)
        on left: 92 93
        on right: 90 91
    expression_statement <expr> (92)
        on left: 94 95
        on right: 84 98
    selection_statement <expr> (93)
        on left: 96 97
        on right: 85
    iteration_statement <expr> (94)
        on left: 98 99 100
        on right: 86
    jump_statement <expr> (95)
        on left: 101 102 103 104
        on right: 87
    translation_unit (96)
        on left: 105 106
        on right: 0 106
    external_declaration (97)
        on left: 107 108
        on right: 105 106
    function_definition (98)
        on left: 109 110
        on right: 107
    function_prototype <dec> (99)
        on left: 111
        on right: 110
    declaration_list (100)
        on left: 112 113
        on right: 109 113


State 0

    0 $accept: • translation_unit $end

    VOID     shift, and go to state 1
    FLOAT    shift, and go to state 2
    INTEGER  shift, and go to state 3
    CHAR     shift, and go to state 4

    declaration           go to state 5
    type_specifier        go to state 6
    translation_unit      go to state 7
    external_declaration  go to state 8
    function_definition   go to state 9
    function_prototype    go to state 10


State 1

   64 type_specifier: VOID •

    $default  reduce using rule 64 (type_specifier)


State 2

   67 type_specifier: FLOAT •

    $default  reduce using rule 67 (type_specifier)


State 3

   66 type_specifier: INTEGER •

    $default  reduce using rule 66 (type_specifier)


State 4

   65 type_specifier: CHAR •

    $default  reduce using rule 65 (type_specifier)


State 5

  108 external_declaration: declaration •

    $default  reduce using rule 108 (external_declaration)


State 6

   59 declaration: type_specifier • init_declarator_list SEMICOLON
  109 function_definition: type_specifier • declarator declaration_list compound_statement
  111 function_prototype: type_specifier • declarator

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12
    MULT        shift, and go to state 13

    init_declarator_list  go to state 14
    init_declarator       go to state 15
    declarator            go to state 16
    direct_declarator     go to state 17
    pointer               go to state 18


State 7

    0 $accept: translation_unit • $end
  106 translation_unit: translation_unit • external_declaration

    $end     shift, and go to state 19
    VOID     shift, and go to state 1
    FLOAT    shift, and go to state 2
    INTEGER  shift, and go to state 3
    CHAR     shift, and go to state 4

    declaration           go to state 5
    type_specifier        go to state 6
    external_declaration  go to state 20
    function_definition   go to state 9
    function_prototype    go to state 10


State 8

  105 translation_unit: external_declaration •

    $default  reduce using rule 105 (translation_unit)


State 9

  107 external_declaration: function_definition •

    $default  reduce using rule 107 (external_declaration)


State 10

  110 function_definition: function_prototype • compound_statement

    BLOCKBEGIN  shift, and go to state 21

    compound_statement  go to state 22


State 11

   70 direct_declarator: IDENTIFIER •

    $default  reduce using rule 70 (direct_declarator)


State 12

   71 direct_declarator: LPAREN • declarator RPAREN

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12
    MULT        shift, and go to state 13

    declarator         go to state 23
    direct_declarator  go to state 17
    pointer            go to state 18


State 13

   75 pointer: MULT •

    $default  reduce using rule 75 (pointer)


State 14

   59 declaration: type_specifier init_declarator_list • SEMICOLON
   61 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 24
    COMMA      shift, and go to state 25


State 15

   60 init_declarator_list: init_declarator •

    $default  reduce using rule 60 (init_declarator_list)


State 16

   62 init_declarator: declarator •
   63                | declarator • ASSIGN initializer
  109 function_definition: type_specifier declarator • declaration_list compound_statement
  111 function_prototype: type_specifier declarator •

    VOID     shift, and go to state 1
    FLOAT    shift, and go to state 2
    INTEGER  shift, and go to state 3
    CHAR     shift, and go to state 4
    ASSIGN   shift, and go to state 26

    BLOCKBEGIN  reduce using rule 111 (function_prototype)
    $default    reduce using rule 62 (init_declarator)

    declaration       go to state 27
    type_specifier    go to state 28
    declaration_list  go to state 29


State 17

   69 declarator: direct_declarator •
   72 direct_declarator: direct_declarator • LSQRBRC RSQRBRC
   73                  | direct_declarator • LSQRBRC assignment_expression RSQRBRC
   74                  | direct_declarator • LPAREN parameter_type_list_opt RPAREN

    LSQRBRC  shift, and go to state 30
    LPAREN   shift, and go to state 31

    $default  reduce using rule 69 (declarator)


State 18

   68 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12

    direct_declarator  go to state 32


State 19

    0 $accept: translation_unit $end •

    $default  accept


State 20

  106 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 106 (translation_unit)


State 21

   88 compound_statement: BLOCKBEGIN • BLOCKEND
   89                   | BLOCKBEGIN • block_item_list BLOCKEND

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    RETURN      shift, and go to state 38
    VOID        shift, and go to state 1
    FLOAT       shift, and go to state 2
    INTEGER     shift, and go to state 3
    CHAR        shift, and go to state 4
    DO          shift, and go to state 39
    WHILE       shift, and go to state 40
    IF          shift, and go to state 41
    FOR         shift, and go to state 42
    GOTO        shift, and go to state 43
    BREAK       shift, and go to state 44
    LPAREN      shift, and go to state 45
    BLOCKBEGIN  shift, and go to state 21
    BLOCKEND    shift, and go to state 46
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54
    SEMICOLON   shift, and go to state 55

    primary_expression         go to state 56
    postfix_expression         go to state 57
    unary_expression           go to state 58
    unary_operator             go to state 59
    multiplicative_expression  go to state 60
    additive_expression        go to state 61
    shift_expression           go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    AND_expression             go to state 65
    XOR_expression             go to state 66
    OR_expression              go to state 67
    logical_and_expression     go to state 68
    logical_or_expression      go to state 69
    conditional_expression     go to state 70
    assignment_expression      go to state 71
    expression                 go to state 72
    declaration                go to state 73
    type_specifier             go to state 28
    statement                  go to state 74
    compound_statement         go to state 75
    block_item_list            go to state 76
    block_item                 go to state 77
    expression_statement       go to state 78
    selection_statement        go to state 79
    iteration_statement        go to state 80
    jump_statement             go to state 81


State 22

  110 function_definition: function_prototype compound_statement •

    $default  reduce using rule 110 (function_definition)


State 23

   71 direct_declarator: LPAREN declarator • RPAREN

    RPAREN  shift, and go to state 82


State 24

   59 declaration: type_specifier init_declarator_list SEMICOLON •

    $default  reduce using rule 59 (declaration)


State 25

   61 init_declarator_list: init_declarator_list COMMA • init_declarator

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12
    MULT        shift, and go to state 13

    init_declarator    go to state 83
    declarator         go to state 84
    direct_declarator  go to state 17
    pointer            go to state 18


State 26

   63 init_declarator: declarator ASSIGN • initializer

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    LPAREN      shift, and go to state 45
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54

    primary_expression         go to state 56
    postfix_expression         go to state 57
    unary_expression           go to state 58
    unary_operator             go to state 59
    multiplicative_expression  go to state 60
    additive_expression        go to state 61
    shift_expression           go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    AND_expression             go to state 65
    XOR_expression             go to state 66
    OR_expression              go to state 67
    logical_and_expression     go to state 68
    logical_or_expression      go to state 69
    conditional_expression     go to state 70
    assignment_expression      go to state 85
    initializer                go to state 86


State 27

  112 declaration_list: declaration •

    $default  reduce using rule 112 (declaration_list)


State 28

   59 declaration: type_specifier • init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12
    MULT        shift, and go to state 13

    init_declarator_list  go to state 14
    init_declarator       go to state 15
    declarator            go to state 84
    direct_declarator     go to state 17
    pointer               go to state 18


State 29

  109 function_definition: type_specifier declarator declaration_list • compound_statement
  113 declaration_list: declaration_list • declaration

    VOID        shift, and go to state 1
    FLOAT       shift, and go to state 2
    INTEGER     shift, and go to state 3
    CHAR        shift, and go to state 4
    BLOCKBEGIN  shift, and go to state 21

    declaration         go to state 87
    type_specifier      go to state 28
    compound_statement  go to state 88


State 30

   72 direct_declarator: direct_declarator LSQRBRC • RSQRBRC
   73                  | direct_declarator LSQRBRC • assignment_expression RSQRBRC

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    RSQRBRC     shift, and go to state 89
    LPAREN      shift, and go to state 45
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54

    primary_expression         go to state 56
    postfix_expression         go to state 57
    unary_expression           go to state 58
    unary_operator             go to state 59
    multiplicative_expression  go to state 60
    additive_expression        go to state 61
    shift_expression           go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    AND_expression             go to state 65
    XOR_expression             go to state 66
    OR_expression              go to state 67
    logical_and_expression     go to state 68
    logical_or_expression      go to state 69
    conditional_expression     go to state 70
    assignment_expression      go to state 90


State 31

   74 direct_declarator: direct_declarator LPAREN • parameter_type_list_opt RPAREN

    VOID     shift, and go to state 1
    FLOAT    shift, and go to state 2
    INTEGER  shift, and go to state 3
    CHAR     shift, and go to state 4

    $default  reduce using rule 79 (parameter_type_list_opt)

    type_specifier           go to state 91
    parameter_list           go to state 92
    parameter_type_list_opt  go to state 93
    parameter_declaration    go to state 94


State 32

   68 declarator: pointer direct_declarator •
   72 direct_declarator: direct_declarator • LSQRBRC RSQRBRC
   73                  | direct_declarator • LSQRBRC assignment_expression RSQRBRC
   74                  | direct_declarator • LPAREN parameter_type_list_opt RPAREN

    LSQRBRC  shift, and go to state 30
    LPAREN   shift, and go to state 31

    $default  reduce using rule 68 (declarator)


State 33

    3 primary_expression: IDENTIFIER •

    $default  reduce using rule 3 (primary_expression)


State 34

    4 primary_expression: INTCONST •

    $default  reduce using rule 4 (primary_expression)


State 35

    5 primary_expression: FLOATCONST •

    $default  reduce using rule 5 (primary_expression)


State 36

    7 primary_expression: STRING •

    $default  reduce using rule 7 (primary_expression)


State 37

    6 primary_expression: CHARCONST •

    $default  reduce using rule 6 (primary_expression)


State 38

  101 jump_statement: RETURN • SEMICOLON
  102               | RETURN • expression SEMICOLON

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    LPAREN      shift, and go to state 45
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54
    SEMICOLON   shift, and go to state 95

    primary_expression         go to state 56
    postfix_expression         go to state 57
    unary_expression           go to state 58
    unary_operator             go to state 59
    multiplicative_expression  go to state 60
    additive_expression        go to state 61
    shift_expression           go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    AND_expression             go to state 65
    XOR_expression             go to state 66
    OR_expression              go to state 67
    logical_and_expression     go to state 68
    logical_or_expression      go to state 69
    conditional_expression     go to state 70
    assignment_expression      go to state 71
    expression                 go to state 96


State 39

   99 iteration_statement: DO • M statement M WHILE LPAREN expression RPAREN SEMICOLON

    $default  reduce using rule 1 (M)

    M  go to state 97


State 40

  100 iteration_statement: WHILE • M LPAREN expression RPAREN M statement

    $default  reduce using rule 1 (M)

    M  go to state 98


State 41

   96 selection_statement: IF • LPAREN expression N RPAREN M statement N
   97                    | IF • LPAREN expression N RPAREN M statement N ELSE M statement N

    LPAREN  shift, and go to state 99


State 42

   98 iteration_statement: FOR • LPAREN expression_statement M expression_statement N M expression N RPAREN M statement

    LPAREN  shift, and go to state 100


State 43

  104 jump_statement: GOTO • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 101


State 44

  103 jump_statement: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 102


State 45

    8 primary_expression: LPAREN • expression RPAREN

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    LPAREN      shift, and go to state 45
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54

    primary_expression         go to state 56
    postfix_expression         go to state 57
    unary_expression           go to state 58
    unary_operator             go to state 59
    multiplicative_expression  go to state 60
    additive_expression        go to state 61
    shift_expression           go to state 62
    relational_expression      go to state 63
    equality_expression        go to state 64
    AND_expression             go to state 65
    XOR_expression             go to state 66
    OR_expression              go to state 67
    logical_and_expression     go to state 68
    logical_or_expression      go to state 69
    conditional_expression     go to state 70
    assignment_expression      go to state 71
    expression                 go to state 103


State 46

   88 compound_statement: BLOCKBEGIN BLOCKEND •

    $default  reduce using rule 88 (compound_statement)


State 47

   20 unary_operator: INCR •

    $default  reduce using rule 20 (unary_operator)


State 48

   21 unary_operator: DECR •

    $default  reduce using rule 21 (unary_operator)


State 49

   18 unary_operator: BITAND •

    $default  reduce using rule 18 (unary_operator)


State 50

   25 unary_operator: LOGICALNOT •

    $default  reduce using rule 25 (unary_operator)


State 51

   24 unary_operator: COMPLEMENT •

    $default  reduce using rule 24 (unary_operator)


State 52

   19 unary_operator: MULT •

    $default  reduce using rule 19 (unary_operator)


State 53

   22 unary_operator: ADD •

    $default  reduce using rule 22 (unary_operator)


State 54

   23 unary_operator: SUB •

    $default  reduce using rule 23 (unary_operator)


State 55

   95 expression_statement: SEMICOLON •

    $default  reduce using rule 95 (expression_statement)


State 56

    9 postfix_expression: primary_expression •

    $default  reduce using rule 9 (postfix_expression)


State 57

   10 postfix_expression: postfix_expression • LSQRBRC expression RSQRBRC
   11                   | postfix_expression • LPAREN argument_expression_list RPAREN
   12                   | postfix_expression • LPAREN RPAREN
   13                   | postfix_expression • DEREF IDENTIFIER
   16 unary_expression: postfix_expression •

    LSQRBRC  shift, and go to state 104
    LPAREN   shift, and go to state 105
    DEREF    shift, and go to state 106

    $default  reduce using rule 16 (unary_expression)


State 58

   26 multiplicative_expression: unary_expression •
   57 assignment_expression: unary_expression • ASSIGN assignment_expression

    ASSIGN  shift, and go to state 107

    $default  reduce using rule 26 (multiplicative_expression)


State 59

   17 unary_expression: unary_operator • unary_expression

    IDENTIFIER  shift, and go to state 33
    INTCONST    shift, and go to state 34
    FLOATCONST  shift, and go to state 35
    STRING      shift, and go to state 36
    CHARCONST   shift, and go to state 37
    LPAREN      shift, and go to state 45
    INCR        shift, and go to state 47
    DECR        shift, and go to state 48
    BITAND      shift, and go to state 49
    LOGICALNOT  shift, and go to state 50
    COMPLEMENT  shift, and go to state 51
    MULT        shift, and go to state 52
    ADD         shift, and go to state 53
    SUB         shift, and go to state 54

    primary_expression  go to state 56
    postfix_expression  go to state 57
    unary_expression    go to state 108
    unary_operator      go to state 59


State 60

   27 multiplicative_expression: multiplicative_expression • MULT unary_expression
   28                          | multiplicative_expression • DIV unary_expression
   29                          | multiplicative_expression • MOD unary_expression
   30 additive_expression: multiplicative_expression •

    MULT  shift, and go to state 109
    DIV   shift, and go to state 110
    MOD   shift, and go to state 111

    $default  reduce using rule 30 (additive_expression)


State 61

   31 additive_expression: additive_expression • ADD multiplicative_expression
   32                    | additive_expression • SUB multiplicative_expression
   33 shift_expression: additive_expression •

    ADD  shift, and go to state 112
    SUB  shift, and go to state 113

    $default  reduce using rule 33 (shift_expression)


State 62

   34 shift_expression: shift_expression • LSHIFT additive_expression
   35                 | shift_expression • RSHIFT additive_expression
   36 relational_expression: shift_expression •

    LSHIFT  shift, and go to state 114
    RSHIFT  shift, and go to state 115

    $default  reduce using rule 36 (relational_expression)


State 63

   37 relational_expression: relational_expression • LESS shift_expression
   38                      | relational_expression • GREATER shift_expression
   39                      | relational_expression • LESSEQUAL shift_expression
   40                      | relational_expression • GREATEREQUAL shift_expression
   41 equality_expression: relational_expression •

    LESSEQUAL     shift, and go to state 116
    GREATEREQUAL  shift, and go to state 117
    LESS          shift, and go to state 118
    GREATER       shift, and go to state 119

    $default  reduce using rule 41 (equality_expression)


State 64

   42 equality_expression: equality_expression • EQUALITY relational_expression
   43                    | equality_expression • NOTEQUAL relational_expression
   44 AND_expression: equality_expression •

    EQUALITY  shift, and go to state 120
    NOTEQUAL  shift, and go to state 121

    $default  reduce using rule 44 (AND_expression)


State 65

   45 AND_expression: AND_expression • BITAND equality_expression
   46 XOR_expression: AND_expression •

    BITAND  shift, and go to state 122

    $default  reduce using rule 46 (XOR_expression)


State 66

   47 XOR_expression: XOR_expression • BITXOR AND_expression
   48 OR_expression: XOR_expression •

    BITXOR  shift, and go to state 123

    $default  reduce using rule 48 (OR_expression)


State 67

   49 OR_expression: OR_expression • BITOR XOR_expression
   50 logical_and_expression: OR_expression •

    BITOR  shift, and go to state 124

    $default  reduce using rule 50 (logical_and_expression)


State 68

   51 logical_and_expression: logical_and_expression • LOGICALAND M OR_expression
   52 logical_or_expression: logical_and_expression •

    LOGICALAND  shift, and go to state 125

    $default  reduce using rule 52 (logical_or_expression)


State 69

   53 logical_or_expression: logical_or_expression • LOGICALOR M logical_and_expression
   54 conditional_expression: logical_or_expression •
   55                       | logical_or_expression • N QUESTION M expression N COLON M conditional_expression

    LOGICALOR  shift, and go to state 126

    QUESTION  reduce using rule 2 (N)
    $default  reduce using rule 54 (conditional_expression)

    N  go to state 127


State 70

   56 assignment_expression: conditional_expression •

    $default  reduce using rule 56 (assignment_expression)


State 71

   58 expression: assignment_expression •

    $default  reduce using rule 58 (expression)


State 72

   94 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 128


State 73

   92 block_item: declaration •

    $default  reduce using rule 92 (block_item)


State 74

   93 block_item: statement •

    $default  reduce using rule 93 (block_item)


State 75

   83 statement: compound_statement •

    $default  reduce using rule 83 (statement)


State 76

   89 compound_statement: BLOCKBEGIN block_item_list • BLOCKEND
   91 block_item_list: block_item_list • M block_item

    BLOCKEND  shift, and go to state 129

    $default  reduce using rule 1 (M)

    M  go to state 130


State 77

   90 block_item_list: block_item •

    $default  reduce using rule 90 (block_item_list)


State 78

   84 statement: expression_statement •

    $default  reduce using rule 84 (statement)


State 79

   85 statement: selection_statement •

    $default  reduce using rule 85 (statement)


State 80

   86 statement: iteration_statement •

    $default  reduce using rule 86 (statement)


State 81

   87 statement: jump_statement •

    $default  reduce using rule 87 (statement)


State 82

   71 direct_declarator: LPAREN declarator RPAREN •

    $default  reduce using rule 71 (direct_declarator)


State 83

   61 init_declarator_list: init_declarator_list COMMA init_declarator •

    $default  reduce using rule 61 (init_declarator_list)


State 84

   62 init_declarator: declarator •
   63                | declarator • ASSIGN initializer

    ASSIGN  shift, and go to state 26

    $default  reduce using rule 62 (init_declarator)


State 85

   82 initializer: assignment_expression •

    $default  reduce using rule 82 (initializer)


State 86

   63 init_declarator: declarator ASSIGN initializer •

    $default  reduce using rule 63 (init_declarator)


State 87

  113 declaration_list: declaration_list declaration •

    $default  reduce using rule 113 (declaration_list)


State 88

  109 function_definition: type_specifier declarator declaration_list compound_statement •

    $default  reduce using rule 109 (function_definition)


State 89

   72 direct_declarator: direct_declarator LSQRBRC RSQRBRC •

    $default  reduce using rule 72 (direct_declarator)


State 90

   73 direct_declarator: direct_declarator LSQRBRC assignment_expression • RSQRBRC

    RSQRBRC  shift, and go to state 131


State 91

   80 parameter_declaration: type_specifier • declarator
   81                      | type_specifier •

    IDENTIFIER  shift, and go to state 11
    LPAREN      shift, and go to state 12
    MULT        shift, and go to state 13

    $default  reduce using rule 81 (parameter_declaration)

    declarator         go to state 132
    direct_declarator  go to state 17
    pointer            go to state 18


State 92

   77 parameter_list: parameter_list • COMMA parameter_declaration
   78 parameter_type_list_opt: parameter_list •

    COMMA  shift, and go to state 133

    $default  reduce using rule 78 (parameter_type_list_opt)


State 93

   74 direct_declarator: direct_declarator LPAREN parameter_type_list_opt • RPAREN

    RPAREN  shift, and go to state 134


State 94

   76 parameter_list: parameter_declaration •

    $default  reduce using rule 76 (parameter_list)


State 95

  101 jump_statement: RETURN SEMICOLON •

    $default  reduce using rule 101 (jump_statement)


State 96

  102 jump_statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 135


State 97

   99 iteration_statement: DO M • statement M WHILE LPAREN expression RPAREN SEMICOLON
